--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "chartjs": "^0.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
     "react-simple-typewriter": "^5.0.1",
